--- a/success.html
+++ b/success.html
@@ -15,6 +15,7 @@
       body{
         background-image: url(https://i.pinimg.com/736x/b7/50/6e/b7506e0c58cdd52d0373a0b77f49f828.jpg);
         background-size: cover;
+        background-repeat: no-repeat;
       }
     </style>
   </head>
